--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "derived-property",
-  "description": "Create derived properties for your objects",
+  "description": "Create a derived property for an object",
   "version": "1.0.0",
   "author": "Gilad Peleg <giladp007@gmail.com> (http://giladpeleg.com)",
   "repository": "pgilad/derived-property",
@@ -26,8 +26,7 @@
     "magic"
   ],
   "dependencies": {
-    "get-value": "^0.3.2",
-    "lodash.clonedeep": "3.0.1",
-    "set-object": "^0.1.0"
+    "lodash.clonedeep": "^3.0.1",
+    "lodash.result": "^3.1.2"
   }
 }
