--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "mocha -R spec"
   },
   "devDependencies": {
+    "backbone": "^1.2.1",
     "expect.js": "^0.3.1",
     "mocha": "*"
   },
