--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "mocha -R spec",
+    "cover": "istanbul cover -i index.js _mocha -- -R spec test.js",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "devDependencies": {
     "backbone": "^1.2.1",
+    "coveralls": "^2.11.2",
     "expect.js": "^0.3.1",
+    "istanbul": "^0.3.17",
     "mocha": "*"
   },
   "keywords": [
